# lottery-number-maker

./: .env.sample  Cargo.toml  Dockerfile  clippy.toml  docker-compose.yaml  makefile  readme.md
migrations/: 20231112142714_add_lottery.sql
src/: app_state.rs  env.rs  error.rs  log.rs  main.rs
src/cron/: creator.rs  handler.rs
src/health/: handler.rs  mod.rs  route.rs
src/lottery/: handler.rs  mod.rs  model.rs  route.rs  service.rs  service_test.rs
src/middlewares/: middleware.rs
tests/: health.rs
