[package]
name = "lottery-number-maker"
version = "0.0.1"
edition = "2021"
authors = ["Yacho <bakjuna@gmail.com>"]
license = "MIT"
description = "lottery number for Korea"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
axum = "0.6.7"
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
lazy-regex = "3"
async-trait = "0.1"
strum_macros = "0.25"
dotenv = "0.15.0"
uuid = {version = "1", features = ["v4","fast-rng",]}
rand = "0.8"
tokio-cron-scheduler = "0.9.0"
sqlx = {version = "0.7.2", features = ["runtime-async-std-native-tls", "postgres"]}
mockall = "0.11.4"
mockall_double = "0.3.0"
rstest = "0.18.2"
hyper = "0.14.27"

[dev-dependencies]
clippy = "0.0.302"
anyhow = "1"
httpc-test = "0.1.1"
hyper = "0.14.27"
